# mare-website

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-0cc6c976187115a3758408ede8c13c61fe088f751c4d079d59ee09202abd21f1.json  query-59af23ee176d23fc32817ec3849ef88e4dbd43e67a2980f55475200d2035f5cf.json  query-88921b0055e01ca35368ba5c93f2f8f06bf2ada4d6f970ee0eb18a4cb477e5de.json  query-b53d8b1c72d379cf67410ef15596ae61d73d74b10b694ef159ccac52d4ed1596.json  query-d95920609403b4544a6ec30c0c82442b18199cfe97990ef881d202decc73b5a0.json
docker/grafana/: config.yml
docker/loki/: config.yml
migrations/: 20231123184331_create-mares-table.down.sql  20231123184331_create-mares-table.up.sql  20231201195618_add-enum-error-state-for-set.down.sql  20231201195618_add-enum-error-state-for-set.up.sql
src/: lib.rs  logging.rs  main.rs
src/app/: app_error.rs  mod.rs
src/database/: breed.rs  mod.rs
src/utils/: mod.rs  ulid.rs
templates/: base.askama.html  error.askama.html  get_mare.askama.html  index.askama.html  mare_image.askama.html  mare_table.askama.html  paged_mare_table.askama.html
